# Koryo

./: .dir-locals.el  .envrc  Koryo.cabal  README.md  cabal.project  default.nix  deploy.nix  hie.yaml  hls_overlay.nix  nixpkgs.nix  reflex.nix  shell.nix
app/: MainUI.hs
frontend/: frontend.cabal
frontend/app/: MainServer.hs  MainUI.hs
frontend/src/: Assets.hs  Koryo.hs  Server.hs
frontend/src/UIReflex/: CSS.hs  UI.hs
src/: Assets.hs  Board.hs  Cards.hs  Koryo.hs  Server.hs
src/UIReflex/: CSS.hs  Runner.hs  UI.hs
tests/: BoardSpec.hs  KoryoSpec.hs
