cabal-version:       2.2

name:                Koryo
version:             0.1.0.0
-- synopsiss:
-- description:
homepage:            https://github.com/guibou/Koryo#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
copyright:           2020 Guillaume Bouchard
category:            Web
build-type:          Simple
extra-source-files:  README.md, images/1.png

common shared-properties
  hs-source-dirs:      src
  ghc-options: -Wall -Wno-partial-type-signatures -Wincomplete-uni-patterns
  default-language:    Haskell2010


library
  import: shared-properties

  exposed-modules:     UIReflex.UI, UIReflex.CSS, Koryo, Assets
  if(!impl(ghcjs))
    exposed-modules: Server
  build-depends:       base
                     , reflex
                     , clay
                     , bytestring
                     , reflex-dom
                     , reflex-dom-core
                     , containers
                     , jsaddle
                     , lens
                     , text
                     , PyF
                     , random
                     , random-shuffle
                     , time
                     , hspec
                     , QuickCheck
                     , aeson
                     , file-embed
                     , base64-bytestring
                     , generic-lens
  if(!impl(ghcjs))
    build-depends: websockets

executable ui
  main-is: app/MainUI.hs
  build-depends: base, Koryo

executable server
 main-is: app/MainServer.hs
 build-depends: base, Koryo
 if(impl(ghcjs))
   buildable: False

source-repository head
  type:     git
  location: https://github.com/guibou/Koryo
