name:                frontend
version:             0.1.0.0
-- synopsiss:
-- description:
homepage:            https://github.com/guibou/Koryo#readme
license:             BSD3
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
copyright:           2020 Guillaume Bouchard
category:            Web
build-type:          Simple
extra-source-files:  README.md, images/1.png
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:     UIReflex.UI, UIReflex.CSS, Koryo, Server, Assets
  build-depends:       base
                     , reflex
                     , clay
                     , bytestring
                     , reflex-dom
                     , reflex-dom-core
                     , containers
                     , jsaddle
                     , lens
                     , text
                     , PyF
                     , random
                     , random-shuffle
                     , time
                     , hspec
                     , QuickCheck
                     , vector
                     , ghci-pretty
                     , websockets
                     , aeson
                     , file-embed
                     , base64-bytestring
                     , generic-lens
  default-extensions:

  ghc-options: -Wall -Wno-partial-type-signatures -Wincomplete-uni-patterns

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/guibou/Koryo
